# HackXplore

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  FRONTEND.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
Data/: 2015-10-01_Isolated_combustion_chamber.pptx  Berechnung Schallgeschwindigkeit im Auspuff.xlsx  Fuel_Kraftstoffe_Übersicht_Daten.xlsx  HYDAC International.url  Mögliche Werkzeugradien.doc  Mögliche Werkzeugradien.docx
RAG Agent UI Design/design_handoff_hirth_knowledge_engine/: Hirth Knowledge Engine.dc.html  README.md
chroma_store/: chroma.sqlite3
docs/: RETRIEVAL_UPGRADES.md
eval/: PROMPT_TEMPLATE.md  Questionarrie_eval.json  ragas_eval.py  run_ragas.py
eval/results/: PITCH_TABLE.md  latest.md  ragas_20260627_175203.csv  ragas_20260627_175203.json  ragas_20260627_175916.csv  ragas_20260627_175916.json  ragas_20260627_181814.csv  ragas_20260627_181814.json  ragas_20260627_185508.csv  ragas_20260627_185508.json  ragas_20260627_235005.csv  ragas_20260627_235005.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: AnswerPanel.jsx  AroundTheWeb.jsx  AskView.jsx  ExploreState.jsx  FactChip.jsx  QueryBar.jsx  RelatedDomains.jsx  ReviewOverlay.jsx  Toast.jsx  TopBar.jsx  UploadView.jsx  icons.jsx
frontend/src/lib/: api.js  domains.js  webSearch.js
graph_store/: extractions.json  graph.json
scripts/: inspect_chunks.py
src/rag_service/: config.py  main.py  retry.py
src/rag_service/api/: routes.py  schemas.py
src/rag_service/cache/: redis_cache.py
src/rag_service/core/: extraction.py  generation.py  graph.py  ingestion.py  loaders.py  maintenance.py  pipeline.py  retrieval.py
src/rag_service/llm/: openai_client.py
src/rag_service/observability/: cost_tracker.py  logging_setup.py  request_log.py  sentry_setup.py
tests/: conftest.py
tests/eval/: test_regression.py
tests/unit/: test_cost_tracker.py  test_generation.py  test_ingestion.py  test_pipeline.py  test_redis_cache.py  test_request_log.py  test_retrieval.py  test_retry.py  test_routes.py  test_sentry_setup.py
(+4 files in other folders)
